# fileuploader-s3

./: .env.example  README.md  index.html  pyproject.toml  requirements.txt
docs/: documentation.md
src/fileuploader_s3/: main.py  security.py
